# sammine-lang

./: .gitignore  AstBase_8h.html  AstBase_8h__dep__incl.map  AstBase_8h__dep__incl.md5  AstBase_8h__incl.map  AstBase_8h__incl.md5  AstBase_8h_source.html  AstDecl_8h.html  AstDecl_8h__dep__incl.map  AstDecl_8h__dep__incl.md5  AstDecl_8h__incl.map  AstDecl_8h__incl.md5  AstDecl_8h_source.html  AstPrinterVisitor_8cpp.html  AstPrinterVisitor_8cpp__incl.map  AstPrinterVisitor_8cpp__incl.md5  Ast_8cpp.html  Ast_8cpp__incl.map  Ast_8cpp__incl.md5  Ast_8h.html  Ast_8h__dep__incl.map  Ast_8h__dep__incl.md5  Ast_8h__incl.map  Ast_8h__incl.md5  Ast_8h_source.html  BiTypeChecker_8cpp.html  BiTypeChecker_8cpp__incl.map  BiTypeChecker_8cpp__incl.md5  BiTypeChecker_8h.html  BiTypeChecker_8h__dep__incl.map  BiTypeChecker_8h__dep__incl.md5  BiTypeChecker_8h__incl.map  BiTypeChecker_8h__incl.md5  BiTypeChecker_8h_source.html  CMakeLists.txt  CodegenVisitor_8cpp.html  CodegenVisitor_8cpp__incl.map  CodegenVisitor_8cpp__incl.md5  CodegenVisitor_8h.html  CodegenVisitor_8h__dep__incl.map  (+404 more)
.devcontainer/: devcontainer.json
docs/: grammar.md  parsing.md
e2e-tests/: .lit_test_times.txt  CMakeLists.txt  helloworld.c  lit.cfg.py
html/: AstBase_8h_source.html  AstDecl_8h_source.html  Ast_8h_source.html  BiTypeChecker_8h_source.html  FileRAII_8h__incl.md5  FileRAII_8h_source.html  GeneralSemanticsVisitor_8h_source.html  Lexer_8h.html  Lexer_8h__dep__incl.map  Lexer_8h__dep__incl.md5  Lexer_8h__incl.md5  LexicalContext_8h_source.html  ScopeGeneratorVisitor_8h_source.html  Token_8h_source.html  annotated.html  classFileRAII-members.html  classFileRAII.html  classFunctionType-members.html  classFunctionType.html  classLexicalContext-members.html  classLexicalContext.html  classLexicalContext__coll__graph.map  classsammine__lang_1_1AST_1_1ASTVisitor-members.html  classsammine__lang_1_1AST_1_1ASTVisitor.html  classsammine__lang_1_1AST_1_1ASTVisitor__coll__graph.map  classsammine__lang_1_1AST_1_1ASTVisitor__coll__graph.md5  classsammine__lang_1_1AST_1_1ASTVisitor__inherit__graph.map  classsammine__lang_1_1AST_1_1ASTVisitor__inherit__graph.md5  classsammine__lang_1_1AST_1_1AstBase-members.html  classsammine__lang_1_1AST_1_1AstBase.html  classsammine__lang_1_1AST_1_1AstBase__inherit__graph.md5  classsammine__lang_1_1AST_1_1AstPrinterVisitor-members.html  classsammine__lang_1_1AST_1_1AstPrinterVisitor.html  classsammine__lang_1_1AST_1_1AstPrinterVisitor__coll__graph.map  classsammine__lang_1_1AST_1_1AstPrinterVisitor__coll__graph.md5  classsammine__lang_1_1AST_1_1BiTypeCheckerVisitor-members.html  classsammine__lang_1_1AST_1_1BiTypeCheckerVisitor.html  classsammine__lang_1_1AST_1_1BiTypeCheckerVisitor__coll__graph.map  classsammine__lang_1_1AST_1_1BiTypeCheckerVisitor__coll__graph.md5  classsammine__lang_1_1AST_1_1BinaryExprAST-members.html  (+190 more)
include/: Ast.h  AstBase.h  AstDecl.h  AstNameVisitor.h  AstPrinterVisitor.h  BiTypeChecker.h  CodegenVisitor.h  Compiler.h  FileRAII.h  KaleidoscopeJIT.h  LLVMRes.h  Lexer.h  LexicalContext.h  Parser.h  SammineJIT.h  ScopeGeneratorVisitor.h  TokenType.h  Type.h  TypeCaster.h  Types.h  Utilities.h
latex/: AstBase_8h_source.tex  AstDecl_8h_source.tex  Ast_8h_source.tex  BiTypeChecker_8h_source.tex  CodegenVisitor_8h_source.tex  Compiler_8h_source.tex  FileRAII_8h.tex  FileRAII_8h__incl.md5  FileRAII_8h_source.tex  GeneralSemanticsVisitor_8h_source.tex  LLVMRes_8h_source.tex  Lexer_8h.tex  Lexer_8h__dep__incl.md5  Lexer_8h__incl.md5  Lexer_8h_source.tex  LexicalContext_8h_source.tex  Parser_8h_source.tex  SammineJIT_8h_source.tex  ScopeGeneratorVisitor_8h_source.tex  Token_8h_source.tex  TypeConverter_8h_source.tex  Types_8h_source.tex  Utilities_8h_source.tex  annotated.tex  classFileRAII.tex  classFunctionType.tex  classLexicalContext.tex  classLexicalContext__coll__graph.md5  classsammine__lang_1_1AST_1_1ASTVisitor.tex  classsammine__lang_1_1AST_1_1ASTVisitor__coll__graph.md5  classsammine__lang_1_1AST_1_1ASTVisitor__inherit__graph.md5  classsammine__lang_1_1AST_1_1AstBase.tex  classsammine__lang_1_1AST_1_1AstBase__coll__graph.md5  classsammine__lang_1_1AST_1_1AstBase__inherit__graph.md5  classsammine__lang_1_1AST_1_1AstPrinterVisitor.tex  classsammine__lang_1_1AST_1_1AstPrinterVisitor__coll__graph.md5  classsammine__lang_1_1AST_1_1AstPrinterVisitor__inherit__graph.md5  classsammine__lang_1_1AST_1_1BiTypeCheckerVisitor.tex  classsammine__lang_1_1AST_1_1BiTypeCheckerVisitor__coll__graph.md5  classsammine__lang_1_1AST_1_1BiTypeCheckerVisitor__inherit__graph.md5  (+111 more)
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_7.js  classes_9.js  classes_a.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  (+10 more)
src/: Ast.cpp  AstPrinterVisitor.cpp  BiTypeChecker.cpp  CMakeLists.txt  CodegenVisitor.cpp  Compiler.cpp  Lexer.cpp  Parser.cpp  SammineJIT.cpp  ScopeGeneratorVisitor.cpp  Types.cpp  Utilities.cpp  sammine.cpp
src/AST/: Ast.cpp  CMakeLists.txt  CodegenVisitor.cpp  ScopeGeneratorVisitor.cpp
src/MIR/: BasicBlock.cpp  CFG.cpp  CMakeLists.txt
src/ast/: Ast.cpp  AstPrinterVisitor.cpp  CMakeLists.txt
src/codegen/: CMakeLists.txt  CodegenUtils.cpp  CodegenVisitor.cpp  FunctionCodegen.cpp  Garbage.cpp  SammineJIT.cpp  TypeConverter.cpp
src/compiler/: CMakeLists.txt  Compiler.cpp  sammine.cpp
src/lex/: CMakeLists.txt  Lexer.cpp
src/project/: AST.cpp  CMakeLists.txt  codegenVisitor.cpp  lexer.cpp  logger.cpp  main.cpp  parser.cpp
src/semantics/: CMakeLists.txt  GeneralSemanticsVisitor.cpp  ScopeGeneratorVisitor.cpp
src/typecheck/: BiTypeChecker.cpp  CMakeLists.txt  Types.cpp
src/util/: CMakeLists.txt  Utilities.cpp
unit-test/: CMakeLists.txt  test.cpp  test_invalid_lexer.cpp  test_lexer.cpp  test_parser.cpp
unit-test/artifacts/: fn_def_2.txt  valid_grammar.txt
unit-test/parser/: fn_def_1.txt
(+91 files in other folders)
